начал делать отображение. проблеммы с алгоритмом заполнения кораблей

--- a/src/View/BattleField.css
+++ b/src/View/BattleField.css
@@ -15,8 +15,7 @@
 }
 
 .battleRow{
-
     border-top: 2px solid #dee2e6;
-    width: 20px;
-    height: 20px;
+    /*width: 20px;*/
+    /*height: 20px;*/
 }
